[package]
name = "renderer"
version = "1.0.0"
authors = ["Ivan Komarov <Ivan.Komarov@dfyz.info>"]
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "*"
byteorder = "*"
indexmap = "*"
memmap2 = "*"
png = "*"
quick-xml = "<=0.33"
stb_truetype = "*"
tini = "*"

[dependencies.osmpbf]
version = "*"
optional = true

[features]
perf-stats = []
pbf = ["osmpbf"]

# So that we have line numbers in backtraces with RUST_BACKTRACE=1.
[profile.release]
debug = true
